/*
 * $Id: ChangeLog,v 1.6134 2008/06/06 20:11:38 kaddath Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-06-09 09:38 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * makefile.vc
    * ADS correction

  * contrib/rdd_ads/adsfunc.c
    * Type casts

  * source/compiler/cmdcheck.c
    * Minor correction related to W2

  * source/compiler/harbour.c
    * Added missing flaging og VU_USED for aliased vars

2008-06-06 13:12 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * source/vm/estack.c
    * Fixed compile error with Borland when using HB_ARRAY_USE_COUNTER_OFF (ST only)

2008-06-06 08:44 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * makefile.bc
  * makefile.dc
  * makefile.vc
  * makefile.wc
  * common.mak
  * compile.mak
    ! Test if HB_ADS_IMPLIB is defined before polling its value.

2008-06-05 22:57 UTC-0430 Ron Pinkas <ron/at/xharbour.com>
  * common.mak
  * compile.mak
    * Corrected in consistent and invalid use of !if to !ifdef

  * source/vm/fastitem.c
    * Added few debug asserts

  * include/hbcomp.h
  * source/compiler/cmdcheck.c
  * source/compiler/harbour.c
    + Added support for:
       -WL[ocals][-]
       -WS[tatics][-]
       -WG[lobals][-]
       -WM[emvars][-]
       -WF[ields][-]
       -WB[locks][-]

     NOTES:
        1. -W2 is eqivalent to -WL -WS -WG -WM -WF -WB
           (I didn't use -WAll because it might be used in the future to enable all warnings of all kind)

        2. As with all compiler switches, the last specified switch override previous settings - example:

              -W2 -WB-

           The above will enable all unused variables warnings EXCEPT for Blocks.


2008-06-05 12:50 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * source\compiler\harbour.c